<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
                android:id="@+id/button1"
                android:text="@string/button1"
                android:textAlignment="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="10dp"/>

        <Button
                android:id="@+id/button2"
                android:text="@string/button2"
                android:textAlignment="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="10dp"/>

        <Button
                android:id="@+id/button3"
                android:text="@string/button3"
                android:textAlignment="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="10dp"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

        <Button
                android:id="@+id/button4"
                android:text="@string/button4"
                android:textAlignment="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="10dp"/>

        <Button
                android:id="@+id/button5"
                android:text="@string/button5"
                android:textAlignment="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="10dp"/>

        <Button
                android:id="@+id/button6"
                android:text="@string/button6"
                android:textAlignment="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="10dp"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

        <Button
                android:id="@+id/button7"
                android:text="@string/button7"
                android:textAlignment="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="10dp"/>

        <Button
                android:id="@+id/button8"
                android:text="@string/button8"
                android:textAlignment="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="10dp"/>

        <Button
                android:id="@+id/button9"
                android:text="@string/button9"
                android:textAlignment="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="10dp"/>

    </LinearLayout>

</LinearLayout>